--- a/tex/include/title.tex
+++ b/tex/include/title.tex
@@ -1,8 +1,8 @@
 %!TEX root = ../main.tex
 % file: title.tex
 \begin{center}
-\textsc{\Large MCS507 Project Two:\\}
-\textsc{Study a Mathematical Software Package: Earth}
+\textsc{\Large MCS507 Project Three:\\}
+\textsc{Applications of Bayesian Classifiers}
 \end{center}
 \begin{minipage}{0.6\textwidth}
 \begin{flushleft}
@@ -11,7 +11,7 @@
 \end{minipage}
 \begin{minipage}{0.39\textwidth}
 \begin{flushright}
-	October 28, 2012
+	November 24, 2012
 \end{flushright}
 \end{minipage}\\[0.01in]
 \hrule
