--- a/tex/main.tex
+++ b/tex/main.tex
@@ -48,8 +48,11 @@
 
 \begin{document}
 \input{include/title.tex}
- \input{include/assignment1.tex}
- \input{include/assignment2.tex}
+\input{include/assignment1.tex}
+\input{include/assignment2.tex}
+\input{include/conclusion.tex}
+\input{include/bibliography.tex}
+
 
 	
 
